trunk/Archive2/86/9fc536fe9596dc/output
main.cpp: In function 'int main()':
main.cpp:19:97: error: no matching function for call to 'lexical_cast(const char*, const char*)'
         int n = boost::lexical_cast<int>(temp[1].data() + 4, temp[1].data() + temp[1].size() + 1);
                                                                                                 ^
main.cpp:19:97: note: candidates are:
In file included from main.cpp:7:0:
/usr/local/include/boost/lexical_cast.hpp:2312:19: note: template<class Target, class Source> Target boost::lexical_cast(const Source&)
     inline Target lexical_cast(const Source &arg)
                   ^
/usr/local/include/boost/lexical_cast.hpp:2312:19: note:   template argument deduction/substitution failed:
main.cpp:19:97: note:   candidate expects 1 argument, 2 provided
         int n = boost::lexical_cast<int>(temp[1].data() + 4, temp[1].data() + temp[1].size() + 1);
                                                                                                 ^
In file included from main.cpp:7:0:
/usr/local/include/boost/lexical_cast.hpp:2323:19: note: template<class Target> Target boost::lexical_cast(const char*, std::size_t)
     inline Target lexical_cast(const char* chars, std::size_t count)
                   ^
/usr/local/include/boost/lexical_cast.hpp:2323:19: note:   template argument deduction/substitution failed:
main.cpp:19:94: note:   cannot convert '((& temp.std::vector<_Tp, _Alloc>::operator[]<std::basic_string<char>, std::allocator<std::basic_string<char> > >(1ul))->std::basic_string<_CharT, _Traits, _Alloc>::data<char, std::char_traits<char>, std::allocator<char> >() + (((sizetype)(& temp.std::vector<_Tp, _Alloc>::operator[]<std::basic_string<char>, std::allocator<std::basic_string<char> > >(1ul))->std::basic_string<_CharT, _Traits, _Alloc>::size<char, std::char_traits<char>, std::allocator<char> >()) + 1u))' (type 'const char*') to type 'std::size_t {aka long unsigned int}'
         int n = boost::lexical_cast<int>(temp[1].data() + 4, temp[1].data() + temp[1].size() + 1);
                                                                                              ^
In file included from main.cpp:7:0:
/usr/local/include/boost/lexical_cast.hpp:2331:19: note: template<class Target> Target boost::lexical_cast(const unsigned char*, std::size_t)
     inline Target lexical_cast(const unsigned char* chars, std::size_t count)
                   ^
/usr/local/include/boost/lexical_cast.hpp:2331:19: note:   template argument deduction/substitution failed:
main.cpp:19:57: note:   cannot convert '((& temp.std::vector<_Tp, _Alloc>::operator[]<std::basic_string<char>, std::allocator<std::basic_string<char> > >(1ul))->std::basic_string<_CharT, _Traits, _Alloc>::data<char, std::char_traits<char>, std::allocator<char> >() + 4u)' (type 'const char*') to type 'const unsigned char*'
         int n = boost::lexical_cast<int>(temp[1].data() + 4, temp[1].data() + temp[1].size() + 1);
                                                         ^
In file included from main.cpp:7:0:
/usr/local/include/boost/lexical_cast.hpp:2339:19: note: template<class Target> Target boost::lexical_cast(const signed char*, std::size_t)
     inline Target lexical_cast(const signed char* chars, std::size_t count)
                   ^
/usr/local/include/boost/lexical_cast.hpp:2339:19: note:   template argument deduction/substitution failed:
main.cpp:19:57: note:   cannot convert '((& temp.std::vector<_Tp, _Alloc>::operator[]<std::basic_string<char>, std::allocator<std::basic_string<char> > >(1ul))->std::basic_string<_CharT, _Traits, _Alloc>::data<char, std::char_traits<char>, std::allocator<char> >() + 4u)' (type 'const char*') to type 'const signed char*'
         int n = boost::lexical_cast<int>(temp[1].data() + 4, temp[1].data() + temp[1].size() + 1);
                                                         ^
In file included from main.cpp:7:0:
/usr/local/include/boost/lexical_cast.hpp:2348:19: note: template<class Target> Target boost::lexical_cast(const wchar_t*, std::size_t)
     inline Target lexical_cast(const wchar_t* chars, std::size_t count)
                   ^
/usr/local/include/boost/lexical_cast.hpp:2348:19: note:   template argument deduction/substitution failed:
main.cpp:19:57: note:   cannot convert '((& temp.std::vector<_Tp, _Alloc>::operator[]<std::basic_string<char>, std::allocator<std::basic_string<char> > >(1ul))->std::basic_string<_CharT, _Traits, _Alloc>::data<char, std::char_traits<char>, std::allocator<char> >() + 4u)' (type 'const char*') to type 'const wchar_t*'
         int n = boost::lexical_cast<int>(temp[1].data() + 4, temp[1].data() + temp[1].size() + 1);
                                                         ^
